# work-louder-oai

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
config/: example.toml
docs/: COVERAGE.md  EXTENDING.md  PROTOCOL.md  SERVICE.md
examples/: client.py  factory-keymap.json
src/: codex_micro.py  codex_microctl.py  codex_microd.py
systemd/: codex-microd.service
tests/: test_codex_micro.py  test_codex_microctl.py  test_codex_microd.py
udev/: 70-codex-micro.rules
